welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:29: error: not found: value weekdayBool
		weekdayBool = false;	
                ^